# orient-search

./: .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  agent_logs.py  app.py  pyproject.toml
.github/workflows/: ci.yml
docs/: adoption-eval.md  agent-adoption.md  agent-protocol.md  deep-improvement-plan.md  fast-search-roadmap.md  memory-footprint.md  shared-daemon.md  storage-footprint.md
src/: discover.rs  fast_index.rs  lib.rs  main.rs  query.rs  repo_index.rs  server.rs  session_metrics.rs  shards.rs
src-rs/: lib.rs  main.rs  repo_index.rs  server.rs  session_metrics.rs
src/orient/: __init__.py  repo_index.py
tests/: cli_rs.rs  fast_index_rs.rs  golden_retrieval_rs.rs  repo_index_rs.rs  rg_differential_rs.rs  server_rs.rs  session_metrics_rs.rs  test_repo_index.py
tools/ci/: agent_surface_hygiene.sh  cargo_fmt.sh  cargo_full_test.sh  docs_hygiene.sh  orient_bazel_smoke.sh  orient_perf_gates.sh  orient_smoke.sh  orient_wide_perf.sh
