[package]
name = "orient-search"
version = "0.1.0"
edition = "2024"
description = "Rust-native fast local code search for coding agents"
license = "MIT"

[lib]
name = "orient"

[[bin]]
name = "orient"
path = "src/main.rs"

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
anyhow = "1"
bincode = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
