[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-orientation-layer"
version = "0.1.0"
description = "Local repo and session orientation layer for coding agents."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.2",
  "plotly>=5.22",
  "streamlit>=1.35",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
orient = "orient.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
